packages/lmao-rs/crates/lmao-macros/tests/compile_fail/empty_schema.rs
use lmao_macros::define_log_schema;

define_log_schema!(pub EmptySchema {});

fn main() {}
